Bug 1310483 - Implement nsIURIWithQuery for having query part in simple URI. r=valentin, a=jcristau

--HG--
extra : source : aef4a0fdca31ba6d36908c169121a0fb9fe90dc7